--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+
+
+
+WEBServiceBaseURL="http://musicbrainz.org/ws/2/"
+WEBServiceGoogleApiKey= "AIzaSyCKKPsJXYbDt4noigWs-KiYVK4-Bia7B34"
